# glviskit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yml  build_wheels_linux.yml  build_wheels_macos.yml  build_wheels_win.yml
cmake/: Demo.cmake  GL.cmake  GLM.cmake  Python.cmake  SDL3.cmake  Static.cmake  Web.cmake
examples/: example.py
examples/demo/: CMakeLists.txt  main.cpp
examples/demo_wasm/: CMakeLists.txt  main.cpp
include/: anchor.hpp  buffer_object.hpp  buffer_stack.hpp  camera.hpp  glad.hpp  glviskit.hpp  instance.hpp  line.hpp  point.hpp  program.hpp  render_buffer.hpp  renderer.hpp  sdl.hpp  vao.hpp  window.hpp
include/gl/: buffer_object.hpp  buffer_stack.hpp  gl.hpp  glad.hpp  instance.hpp  program.hpp  vao.hpp
include/glad/: gl.h  gles2.h
include/glviskit/: camera.hpp  glviskit.hpp  render_buffer.hpp
include/glviskit/gl/: buffer_object.hpp  buffer_stack.hpp  instance.hpp
include/glviskit/glad/: gl.h  gles2.h
include/glviskit/primitive/: circle.hpp  point.hpp
include/glviskit/sdl/: manager.hpp  window.hpp
include/primitive/: anchor.hpp  line.hpp  point.hpp
include/sdl/: manager.hpp  sdl.hpp  sdl_ptr.hpp
python/: CMakeLists.txt  Python.cmake
python/src/: bindings.cpp  glviskit.pyi
src/: bindings.cpp  gl.c  gles2.c  glviskit.pyi  main.cpp  main_wasm.cpp
web/: shell_minimal.html
