[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "nanobind>=1.3.2",
    "cibuildwheel",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "glviskit"
version = "0.0.1"
requires-python = ">=3.8"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
# wheel.py-api = "cp312"

[tool.cibuildwheel]
# container-engine = "podman"
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*_i686"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"